fixed scrollbar, fixed loading screen

--- a/style2.css
+++ b/style2.css
@@ -11,15 +11,17 @@ body { font-size:10px;font-family:"Courier New", Courier, monospace;color:white 
 #scrollable ul { list-style-type:none;padding:0px;margin:0px }
 #scrollable ul li { width:200px }
 
-#loading { z-index:4;position:absolute;top:0px;left:0px;width:450px;height:200px;background:black;opacity:0.9;filter:alpha(opacity=90); }
-#loading img { position:absolute;top:76px;left:150px;width:150px;height:48px }
+#loading { z-index:4;position:absolute;top:0px;left:0px;width:450px;height:200px;background:url("") }
+#tracker_empty { position:absolute;top:0px;left:0px;width:450px;height:200px }
+#loading_logo { position:absolute;top:76px;left:150px;width:150px;height:48px }
 
 #map { z-index:3;position:absolute;top:132px;left:250px;width:192px;font-size:16px;font-weight:bold;text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;text-align: center;overflow:hidden }
 #gametype { z-index:3;position:absolute;top:90px;left:254px;background-color:black;opacity:0.8;filter:alpha(opacity=40);padding:4px;font-size:16px }
 
-#rcon { z-index:3;position:absolute;top:174px;left:254px }
-#cvars { z-index:3;position:absolute;top:174px;left:358px }
+#rcon { z-index:3;position:absolute;top:182px;left:254px }
+#cvars { z-index:3;position:absolute;top:182px;left:358px }
 
-#info { z-index:3;position:absolute;top:157px;left:254px }
+#gamemode { z-index:3;position:absolute;top:157px;left:254px;width:100px;height:10px;overflow:hidden }
+#gamename { z-index:3;position:absolute;top:169px;left:254px;width:100px;height:10px;overflow:hidden }
 
 
